--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
-name: ribbon
+name: ribbon_widget
 description: A new Flutter package project.
-version: 0.0.1
-homepage:
+version: 1.0.0
+homepage: https://github.com/raviganwal/ribbon
 
 environment:
   sdk: ">=2.15.1 <3.0.0"
