--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: ribbon_widget
 description: A new Flutter package project.
-version: 1.0.1
-homepage: https://github.com/raviganwal/ribbon
+version: 1.0.4
+homepage: https://github.com/raviganwal/ribbon_widget
 
 environment:
   sdk: ">=2.15.1 <3.0.0"
